Fixed hover for small saved box on mobile

--- a/style.css
+++ b/style.css
@@ -107,12 +107,12 @@ button:hover{
     border-bottom-left-radius: 8px;
     background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(255, 255, 255,0.3));
     position: absolute;
-    height: 100%;
-    height: 100vh;
+    height: 100%;  /*works with chrome and samsung*/
+    height: 100vh; /*100vh fixes for firefox*/
     width: 15vw;
     right: -15%;
     transition: all .4s;
-    height: -webkit-fill-available;
+    height: -webkit-fill-available; /*webkit fixes for chrome w/100%*/
 }
 .sidecontainer button{
     position: absolute;
@@ -182,7 +182,6 @@ footer p a{
     background: #ddd;
     border-radius: 8px;
     transition: all .25s;
-
 }
 
 .deletebox{
@@ -296,9 +295,11 @@ footer p a{
         font-size: 0.6rem;
     }
     .savedbox{
-        margin: 0.05rem;
-        margin-bottom: 0.5rem;
+        margin: 0.25rem 0.025rem 0.25rem 0.025rem;
         border-radius: 5px;
+    }
+    .smallboxcontainer:hover{
+        border-radius: 4px;
     }
     button{
         border-radius: 6px;
